[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Enemy/Fox3.png" type="Texture" id=1]
[ext_resource path="res://Objects/Enemy/Fox7.png" type="Texture" id=2]
[ext_resource path="res://Objects/Enemy/Fox4.png" type="Texture" id=3]
[ext_resource path="res://Objects/Enemy/Fox5.png" type="Texture" id=4]
[ext_resource path="res://Objects/Enemy/Fox6.png" type="Texture" id=5]
[ext_resource path="res://Objects/Enemy/Fox2.png" type="Texture" id=6]
[ext_resource path="res://Objects/Enemy/Fox1.png" type="Texture" id=7]
[ext_resource path="res://Objects/Enemy/Fox.gd" type="Script" id=8]
[ext_resource path="res://Objects/Enemy/Ding.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[node name="Fox" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 8 )
jump_height = 32.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.3

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "jump"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="STween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_top = -40.0
margin_right = 48.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hello"

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BufferJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ForceJump" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Desinterest" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.17233e-07, 4.17233e-07 )
rect = Rect2( -1, 3, 2, 2 )

[node name="Eat Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eat Area"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.5
max_distance = 258.0

[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="Desinterest" to="." method="_on_Desinterest_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Eat Area" to="." method="_on_Eat_Area_body_entered"]
[connection signal="body_exited" from="Eat Area" to="." method="_on_Eat_Area_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
